--- a/Part-3/package.json
+++ b/Part-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "phonebook-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
-  "author": "Mohammad Al-hateel",
+  "author": "Horusateel",
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^3.1.3"
